--- a/help.html
+++ b/help.html
@@ -146,12 +146,10 @@
         .directory-nav .line{ position: absolute; left:4px; top: 5px; bottom: 5px; z-index: 1; width: 2px; background: #ddd;}
         .directory-nav .c-top,.directory-nav .c-bottom{ position: absolute; left: 0; z-index: 2;
             display: block; width: 10px; height: 10px; font-size: 0; line-height: 0;
-            background: url(assets/img/directory-nav.png) no-repeat 0 -69px;
         }
         .directory-nav .c-dot{
             position: absolute; left:-32px; top: 50%; z-index: 2; margin-top: -5px;
             display: block; width: 10px; height: 10px; font-size: 0; line-height: 0;
-            background: url(assets/img/directory-nav.png) no-repeat -275px 0;
         }
 
         .directory-nav .c-top{ top: 0}
@@ -159,7 +157,6 @@
         .directory-nav .cur-tag{
             position: absolute; left: -1px; top:30px; z-index: 5; margin-top: -6px;
             display: block; width: 19px; height: 13px; font-size: 0; line-height: 0;
-            background: url(assets/img/directory-nav.png) no-repeat -271px -37px;
             -webkit-transition:top .3s ease 0s;
             transition:top .3s ease 0s;
         }
@@ -275,7 +272,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/index.png"/>
                                                                     <p class="text-center bigger-120">图1&nbsp;&nbsp;平台首页</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>平台整体分为三个区域，如图1所示：</p>
                                                                             <p style="text-indent: 2em;">●区域1为框架标题部分，这里给出当前用户名信息，点击右上角“欢迎”出选择“退出”即可返回登录界面重新登录； </p>
                                                                             <p style="text-indent: 2em;">●区域2为相关菜单，点击链接后，在区域3中打开对应链接的内容；</p>
@@ -299,7 +296,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/system.png"/>
                                                                     <p class="text-center bigger-120">图2&nbsp;&nbsp;各体系简介</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>体系简介页面：</p>
                                                                             <p style="text-indent: 2em;">●点击十五个体系展示轮播的链接，可进入相应体系的展示页面。
                                                                                 </p>
@@ -338,7 +335,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/people.png"/>
                                                                     <p class="text-center bigger-120">图3.1&nbsp;&nbsp;人员管理</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p style="text-indent: 2em;">●点击“人员管理”，显示该体系的所有成员的人员名单。如图3.1所示。</p>
                                                                         </div>
                                                                     </ul>
@@ -357,7 +354,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/labo.png"/>
                                                                     <p class="text-center bigger-120">图3.2&nbsp;&nbsp;功能研究室</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>点击““功能研究室”菜单项，如图3.2所示。</p>
                                                                             <p style="text-indent: 2em;">●因为权限的不同，所显示的功能研究室的情况也不同，用户的功能权限也不同。
                                                                                 </p>
@@ -380,7 +377,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/station.png"/>
                                                                     <p class="text-center bigger-120">图3.3&nbsp;&nbsp;综合试验站</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>点击“综合试验站”菜单项，如图3.3所示。</p>
                                                                             <p style="text-indent: 2em;">●综合试验站因为权限的不同，所显示的功能研究室的情况也不同，用户的功能权限也不同。</p>
                                                                             <p style="text-indent: 2em;">●首席专家只能修改本体系综合试验站；</p>
@@ -402,7 +399,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/notice.png"/>
                                                                     <p class="text-center bigger-120">图4&nbsp;&nbsp;首席专家发布通知公告页面</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>通知公告因为权限的不同，所能看到的通知公告也不同，且用户的功能权限也不同。</p>
                                                                             <p style="text-indent: 2em;">●通知公告由各个体系的首席专家发布，农委审核，审核通过之后才是发布成功；</p>
                                                                             <p style="text-indent: 2em;">●点击相应列出的标题即可查看对应详细信息。</p>
@@ -424,7 +421,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/dynamic.png"/>
                                                                     <p class="text-center bigger-120">图5&nbsp;&nbsp;首席专家审核体系动态页面</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>点击“体系动态”菜单项，展示的是省体系办以及各产业体系发布的一些重大研究进展、媒体宣传、会议活动、培训服务等。</p>
                                                                             <p style="text-indent: 2em;">●体系动态所有岗位专家及综合试验站站长均可发布，本体系中所有人员发布的动态都由该体系的首席专家审核（包括首席专家自己发布的），如图5所示。</p>
                                                                             <p style="text-indent: 2em;">●审核通过之后本体系的所有人员均可见；
@@ -447,7 +444,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/regulation.png"/>
                                                                     <p class="text-center bigger-120">图6&nbsp;&nbsp;首席专家发布本体系规章制度后显示审核中</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>点击“规章制度”菜单项，展示的分别是体系办和各体系发布的各项制度办法，包括资金管理办法、信用管理办法、考评办法等。</p>
                                                                             <p style="text-indent: 2em;">●省体系发布规章制度由其自己审核“通过”即可，且所有体系人员均可见省体系规章制度，如图6所示。</p>
                                                                             <p style="text-indent: 2em;">●各体系规章制度由该体系的首席专家发布本体系的相关规章制度，农委“审核”。若是农委审核选择“通过”按钮，则只有发布的其体系内所有人员可见；若是选择“展示”按钮，则所有体系的所有人员均可见。</p>
@@ -472,7 +469,7 @@
                                                                     
                                                                     <p class="text-center bigger-120">图7&nbsp;&nbsp;首席专家在“细化安排”中发布子任务</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>点击“工作任务”菜单项，因为用户权限的不同，所显示的工作任务也有所不同。</p>
                                                                             <p style="text-indent: 2em;">●由农委发布各个体系的“任务合同”（即总任务），各体系首席专家对本体系的工作任务进行“细化安排”（分配到体系内各个人员的子任务）（如图7所示），
                                                                                 该体系的各个人员执行本体系首席专家所派遣的任务。</p>
@@ -496,7 +493,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/perocess2.png"/>
                                                                     <p class="text-center bigger-120">图8.2&nbsp;&nbsp;首席专家审核通过后的子任务</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>点击“工作进展”菜单项，由被安排子任务的人员发布自己的进展状况（点击“添加”按钮），没有子任务则其下拉列表为空</p>
                                                                             <p style="text-indent: 2em;">●本体系的首席专家有“审核”权利，审核“通过”之后，本体系人员以及农委可见。如图8.2所示。</p>
                                                                         </div>
@@ -516,7 +513,7 @@
                                                                 <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/testmanager.png"/>
                                                                 <p class="text-center bigger-120">图9&nbsp;&nbsp;考评管理页面</p>
                                                                 <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                    <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                    <div  style="display: block;padding-left: 2em;">
                                                                         <p>点击“考评管理”菜单项，考评管理，供各位专家进行考评活动所用，如图9所示。</p>
                                                                         <p style="text-indent: 2em;">●体系办可以启动对各体系的首席和副首席的考评，首席可以对本体系的人员启动考评。</p>
                                                                     </div>
@@ -536,7 +533,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/download.png"/>
                                                                     <p class="text-center bigger-120">图10&nbsp;&nbsp;下载中心页面</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>点击“下载中心”菜单项，下载中心，供各位专家下载通知公告、体系动态以及规章制度等，如图10所示。</p>
                                                                             <p style="text-indent: 2em;">●点击文件名即可下载。</p>
                                                                         </div>
@@ -556,7 +553,7 @@
                                                                     <img class="col-sm-10" style="float: none;display: block;margin-left: auto;margin-right: auto;" src="img/help-img/personal.png"/>
                                                                     <p class="text-center bigger-120">图11&nbsp;&nbsp;个人中心页面</p>
                                                                     <ul class="list-unstyled spaced inline bigger-150 margin-20">
-                                                                        <div id="demo-summernote-edit" style="display: block;padding-left: 2em;">
+                                                                        <div  style="display: block;padding-left: 2em;">
                                                                             <p>点击“个人中心”菜单项，如图11所示。</p>
                                                                             <p style="text-indent: 2em;">●个人可以对本人的基本信息进行相关的修改操作。</p>
                                                                         </div>
@@ -825,7 +822,7 @@
         <!--===================================================-->
         <!-- END OF CONTAINER -->
 
-
+    </div>
 </body>
 
 
@@ -838,11 +835,11 @@
     function DirectoryNav($h,config){
         this.opts = $.extend(true,{
             scrollThreshold:0.5,    //滚动检测阀值 0.5在浏览器窗口中间部位
-            scrollSpeed:700,        //滚动到指定位置的动画时间
+            scrollSpeed:200,        //滚动到指定位置的动画时间
 //          scrollTopBorder:500,//滚动条距离顶部多少的时候显示导航，如果为0，则一直显示
             scrollTopBorder:0,
             easing: 'swing',        //不解释
-            delayDetection:100,     //延时检测，避免滚动的时候检测过于频繁
+            delayDetection:10,     //延时检测，避免滚动的时候检测过于频繁
             scrollChange:function(){}
         },config);
         this.$win = $(window);
@@ -972,5 +969,4 @@
     });
 
 </script>
-  <link rel="stylesheet" href="css/ace.onpage-help.css" />
 </html>
