update readme and update test-list

--- a/subTask_detail.html
+++ b/subTask_detail.html
@@ -426,7 +426,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li style="display: none" id="test">
+                                <li id="test">
                                     <a href="test_manager.html">
                                         <i class="fa fa-magnet"></i>
                                         <span class="menu-title">
