--- a/test_manager.html
+++ b/test_manager.html
@@ -747,7 +747,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li class="active-link" style="display: none" id="test">
+                                <li class="active-link"  id="test">
                                     <a href="test_manager.html">
                                         <i class="fa fa-magnet"></i>
                                         <span class="menu-title">
