--- a/regulation.html
+++ b/regulation.html
@@ -546,7 +546,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li style="display: none" id="test">
+                                <li id="test">
                                     <a href="test_manager.html">
                                         <i class="fa fa-magnet"></i>
                                         <span class="menu-title">
