update permission of expert

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     
                     <a href="system_detail.html?id=15">
                         <img src="img/images/equipment.jpg">
-                        <span>>农机装备产业技术体系</span>
+                        <span>农机装备产业技术体系</span>
                     </a>
                 </li>
     
