--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>体系管理</title>
+    <title>帮助</title>
     <!--STYLESHEET-->
     <!--=================================================-->
 
