change test_manage.html year input to select

--- a/test_manager.html
+++ b/test_manager.html
@@ -485,7 +485,7 @@
                                         年份
                                     </label>
                                     <div class="col-sm-2">
-                                        <input class="form-control input-sm" placeholder="" type="text" name="year">
+                                        <select class="form-control" id="years" name="years"></select>
                                     </div>
                                 </div>
                                 <div class="form-group">
