change testmanage sum decimal point

--- a/test_manager.html
+++ b/test_manager.html
@@ -232,9 +232,13 @@
                                     </div>
                                     <div class="tab-pane fade" id="demo-tabs-box-4">
 
-                                        <table id="testManage_system" class="demo-add-niftycheck"></table>
+                                        <table id="testManage_system" class="demo-add-niftycheck" data-toggle="table" data-search="true" data-show-refresh="true" data-show-toggle="true"
+                                               data-show-columns="true" data-sort-name="id" data-page-list="[5, 10, 20]"
+                                               data-page-size="10" data-pagination="true" data-show-pagination-switch="true"></table>
 
-                                        <table id="testManage_person" class="demo-add-niftycheck"></table>
+                                        <table id="testManage_person" class="demo-add-niftycheck" data-toggle="table" data-search="true" data-show-refresh="true" data-show-toggle="true"
+                                               data-show-columns="true" data-sort-name="id" data-page-list="[5, 10, 20]"
+                                               data-page-size="10" data-pagination="true" data-show-pagination-switch="true"></table>
 
 
                                     </div>
