--- a/taskProgress.html
+++ b/taskProgress.html
@@ -157,11 +157,13 @@
 
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
+            <div id="page-title">
+                <h1 class="page-header text-overflow">工作进展</h1>
+            </div>
 
             <!--Custom Toolbar-->
             <!--===================================================-->
-
+            <div id="page-content">
             <!--===================================================-->
             <div class="panel">
                 <div class="panel-heading">
@@ -187,6 +189,7 @@
                            data-pagination="true" data-show-pagination-switch="true">
                     </table>
                 </div>
+            </div>
             </div>
         </div>
         <!--===================================================-->
