--- a/subTask_detail.html
+++ b/subTask_detail.html
@@ -283,7 +283,7 @@
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 研究室管理
                                     </a>
                                     <a href="#" class="list-group-item" id="sta_control">
-                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 试验站管理
                                     </a>
                                     <a href="help.html" class="list-group-item">
                                         <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
