--- a/system_detail_2.html
+++ b/system_detail_2.html
@@ -176,7 +176,7 @@
 											</div>
 											<div style="text-indent:2em;">
 												<h1 class="text-main">
-													<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>综合实验站站长：&nbsp;&nbsp;
+													<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>综合试验站站长：&nbsp;&nbsp;
 													</small>
 													<small id="station_master"></small>
 												</h1>
