--- a/test_manager.html
+++ b/test_manager.html
@@ -154,17 +154,7 @@
             <div id="page-title">
                 <h1 class="page-header text-overflow">考评管理</h1>
 
-                <!--Searchbox-->
-                <div class="searchbox">
-                    <div class="input-group custom-search-form">
-                        <input type="text" class="form-control" placeholder="Search..">
-                        <span class="input-group-btn">
-                                <button class="text-muted" type="button">
-                                    <i class="demo-pli-magnifi-glass"></i>
-                                </button>
-                            </span>
-                    </div>
-                </div>
+
             </div>
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
             <!--End page title-->
@@ -369,7 +359,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-offset-2 control-label"> 副首席、岗位专家、实验站站长对首席打分权重：</label>
+                            <label class="col-sm-offset-2 control-label"> 副首席、岗位专家、试验站站长对首席打分权重：</label>
                             <div class="col-sm-offset-8" style="margin-top:-30px;">
                                 <input type="number" name="b" style="text-align: center;width:60px;padding-left: 15px;">
                             </div>
@@ -393,7 +383,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-offset-2 control-label"> 岗位专家、实验站站长对副首席打分权重：</label>
+                            <label class="col-sm-offset-2 control-label"> 岗位专家、试验站站长对副首席打分权重：</label>
                             <div class="col-sm-offset-8" style="margin-top:-30px;">
                                 <input type="number" name="f" style="text-align: center;width:60px;padding-left: 15px;">
                             </div>
@@ -426,13 +416,13 @@
                     <div class="modal-body">
                         <input name="id2" type="hidden">
                         <div class="form-group">
-                            <label class="col-sm-offset-1 control-label"> 首席、副首席对岗位专家、实验站站长打分权重：</label>
+                            <label class="col-sm-offset-1 control-label"> 首席、副首席对岗位专家、试验站站长打分权重：</label>
                             <div class="col-sm-offset-9" style="margin-top:-28px;">
                                 <input type="number" name="g" style="text-align: center;width:60px;padding-left: 15px;">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-offset-1 control-label"> 岗位专家、实验站站长对岗位专家、实验站站长打分权重：</label>
+                            <label class="col-sm-offset-1 control-label"> 岗位专家、试验站站长对岗位专家、试验站站长打分权重：</label>
                             <div class="col-sm-offset-9" style="margin-top:-28px;">
                                 <input type="number" name="h" style="text-align: center;width:60px;padding-left: 15px;">
                             </div>
@@ -609,7 +599,7 @@
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 研究室管理
                                     </a>
                                     <a href="#" class="list-group-item" id="sta_control">
-                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 试验站管理
                                     </a>
                                     <a href="help.html" class="list-group-item">
                                         <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
