--- a/station.html
+++ b/station.html
@@ -247,7 +247,7 @@
                             <div class="panel-body">
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label">
-                                        综合实验站名称
+                                        综合试验站名称
                                     </label>
                                     <div class="col-sm-6">
                                         <input class="form-control input-sm" name="staName" placeholder="" type="text">
@@ -331,7 +331,7 @@
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 研究室管理
                                     </a>
                                     <a href="#" class="list-group-item" id="sta_control">
-                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 试验站管理
                                     </a>
                                     <a href="help.html" class="list-group-item">
                                         <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
