--- a/system.html
+++ b/system.html
@@ -245,7 +245,7 @@
                             </button>
                         </div>
                         <div class="modal-body" style="text-align: center">
-                            <h4>将会删除所选体系，及体系内所有用户、功能研究室、综合实验站</h4>
+                            <h4>将会删除所选体系，及体系内所有用户、功能研究室、综合试验站</h4>
                             <br>
                             <button class="btn-danger" id="delete_btn">确认</button>
                         </div>
@@ -323,7 +323,7 @@
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 研究室管理
                                     </a>
                                     <a href="#" class="list-group-item" id="sta_control">
-                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 试验站管理
                                     </a>
                                     <a href="help.html" class="list-group-item">
                                         <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
