--- a/system_detail.html
+++ b/system_detail.html
@@ -246,7 +246,7 @@
                                             </div>
                                             <div style="text-indent:2em;">
                                                 <h1 class="text-main">
-                                                    <small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>综合实验站站长：&nbsp;&nbsp;
+                                                    <small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>综合试验站站长：&nbsp;&nbsp;
                                                     </small>
                                                     <small id="station_master"></small>
                                                 </h1>
@@ -380,7 +380,7 @@
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 研究室管理
                                     </a>
                                     <a href="#" class="list-group-item" id="sta_control">
-                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 试验站管理
                                     </a>
                                     <a href="help.html" class="list-group-item">
                                         <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
