--- a/system_detail.html
+++ b/system_detail.html
@@ -165,9 +165,9 @@
                 <!--===================================================-->
                 <div class="panel panel-default">
                     <!--Panel heading-->
-                    <div class="panel-heading">
+                    <!-- <div class="panel-heading"> -->
 
-                        <div class="panel-control">
+                        <!-- <div class="panel-title"> -->
                             <!--Nav tabs-->
                             <ul class="nav nav-tabs">
                                 <li class="active">
@@ -188,34 +188,36 @@
                                     <a data-toggle="tab" href="#tabs-5">产业概况</a>
                                 </li>
                             </ul>
-                        </div>
-                        <h3 class="panel-title"></h3>
-                    </div>
+                        <!-- </div> -->
+                       
+                    <!-- </div> -->
 
                     <!--Panel body-->
-                    <div class="panel-body">
+                    <!-- <div class="panel-body"> -->
 
                         <!--Tabs content-->
                         <div class="tab-content">
 
                             <div id="tabs-1" class="tab-pane fade in active">
+                              <div class="row"> 
                                 <div class="col-lg-10 col-lg-offset-1 ">
-                                    <h1 style="text-align: center">体系简介</h1>
+                                    <!-- <h1 style="text-align: center">体系简介</h1> -->
                                     <div class="widget-main" id="content">
                                     </div>
                                     <div style="text-align: center">
                                         <button class="btn btn-primary" id="content_change" data-toggle="modal" data-target="#demo-lg-modal">修改</button>
                                     </div>
                                 </div>
+                            </div> 
                             </div>
 
                             <div id="tabs-2" class="tab-pane fade">
-                                <div>
+                                <div class="row">
                                     <div class="col-lg-10 col-lg-offset-1 ">
                                         <div class="panel panel-trans ">
-                                            <div style="text-align: center">
+                                            <!-- <div style="text-align: center">
                                                 <h1>人员名单</h1>
-                                            </div>
+                                            </div> -->
                                             <div style="text-indent:2em;">
                                                 <h1 class="text-main">
                                                     <small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>首席：&nbsp;&nbsp;
@@ -283,7 +285,7 @@
                             </div>
 
                             <div id="tabs-5" class="tab-pane fade" >
-                                <h1 style="text-align: center">产业概况</h1>
+                                <!-- <h1 style="text-align: center">产业概况</h1> -->
                                 <div class="widget-main" id="overView"></div>
                                 <div style="text-align: center">
                                     <button class="btn btn-primary" id="overView_change" data-toggle="modal" data-target="#demo-lg-modal">修改</button>
@@ -291,54 +293,50 @@
                             </div>
 
                         </div>
-                    </div>
+                    <!-- </div> -->
                 </div>
                 <!--===================================================-->
                 <!--End of panel with tabs-->
 
                 <!--===================================================-->
                 <!--End page content-->
-
-                <div id="demo-lg-modal" class="modal fade" tabindex="-1">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i></button>
-                                <h4 class="modal-title" id="myLargeModalLabel">修改</h4>
-                            </div>
-                            <div class="modal-body">
-                                <form class="form-horizontal">
-                                    <div class="panel">
-                                        <div class="panel-body">
-
-                                            <!--Summernote-->
-                                            <!--===================================================-->
-                                            <div id="demo-summernote" >
-                                                <h4><span style="color: rgb(206, 198, 206); font-family: inherit; line-height: 1.1;"></span><br></h4><h4><font color="#9c9c94"></font></h4>
-                                            </div>
-                                            <!--===================================================-->
-                                            <!-- End Summernote -->
-
-                                        </div>
-                                    </div>
-                                </form>
-                                <div class="panel-footer text-right">
-                                    <button class="btn btn-info middle " data-dismiss="modal">退出</button>
-                                    <button class="btn btn-primary middle" id="fix">修改</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
             </div>
             <!--===================================================-->
             <!--END CONTENT CONTAINER-->
 
 
         </div>
+        <div id="demo-lg-modal" class="modal fade" tabindex="-1">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i></button>
+                                        <h4 class="modal-title" id="myLargeModalLabel">修改</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form class="form-horizontal">
+                                            <div class="panel">
+                                                <div class="panel-body">
 
+                                                    <!--Summernote-->
+                                                    <!--===================================================-->
+                                                    <div id="demo-summernote" >
+                                                        <h4><span style="color: rgb(206, 198, 206); font-family: inherit; line-height: 1.1;"></span><br></h4><h4><font color="#9c9c94"></font></h4>
+                                                    </div>
+                                                    <!--===================================================-->
+                                                    <!-- End Summernote -->
+
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <div class="panel-footer text-right">
+                                            <button class="btn btn-info middle " data-dismiss="modal">退出</button>
+                                            <button class="btn btn-primary middle" id="fix">修改</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+        </div>
         <!--MAIN NAVIGATION-->
         <!--===================================================-->
         <nav id="mainnav-container">
@@ -551,19 +549,20 @@
 
             </div>
         </nav>
+    </div>
         <!--===================================================-->
         <!--END MAIN NAVIGATION-->
         <footer id="footer" style="text-align: center">
 
 
-    <span class="bigger-120">
-        <span class="blue bolder">安徽农业大学数字农业研究所
-        </span> &copy; 2017-2018（测试版）
-    </span>
+            <span class="bigger-120">
+                <span class="blue bolder">安徽农业大学数字农业研究所
+                </span> &copy; 2017-2018（测试版）
+            </span>
 
 
         </footer>
-    </div>
+    
     <!--===================================================-->
     <!-- END OF CONTAINER -->
 
