--- a/station_detail.html
+++ b/station_detail.html
@@ -152,26 +152,14 @@
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
             <div id="page-title">
                 <h1 class="page-header text-overflow">综合试验站详情</h1>
-
-                <!--Searchbox-->
-                <div class="searchbox">
-                    <div class="input-group custom-search-form">
-                        <input type="text" class="form-control" placeholder="Search..">
-                        <span class="input-group-btn">
-                                <button class="text-muted" type="button"><i class="demo-pli-magnifi-glass"></i></button>
-                            </span>
-                    </div>
-                </div>
             </div>
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
             <!--End page title-->
-
+        <div id="page-content">
             <!--Custom Toolbar-->
             <!--===================================================-->
             <div class="panel col-lg-10">
-                <!--<div class="panel-heading">
-                    <h3 class="panel-title">功能研究室详情</h3>
-                </div>-->
+        
                 <div class="panel-body">
 
                     <div id="page-content ">
@@ -228,8 +216,8 @@
             </div>
             <!--===================================================-->
 
-
         </div>
+    </div>
         <!--===================================================-->
         <!--END CONTENT CONTAINER-->
 
