update index title

--- a/regulation_detail.html
+++ b/regulation_detail.html
@@ -327,7 +327,7 @@
                                             <span class="pull-right dropdown-toggle">
                                                 <i class="dropdown-caret"></i>
                                             </span>
-                                        <p class="mnp-name">Aaron Chavez</p>
+                                        <p class="mnp-name"></p>
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
