--- a/test_manager.html
+++ b/test_manager.html
@@ -172,15 +172,15 @@
                             <!--Panel heading-->
                             <div class="panel-heading">
                                 <div class="panel-control">
-                                    <ul class="nav nav-tabs">
-                                        <li class="active">
-                                            <a href="#demo-tabs-box-1" data-toggle="tab">考评启动</a>
+                                    <ul class="nav nav-tabs tab-hd">
+                                        <li href="#demo-tabs-box-1" data-toggle="tab">
+                                            <a>考评启动</a>
                                         </li>
-                                        <li>
-                                            <a href="#demo-tabs-box-3" data-toggle="tab">打分系统</a>
+                                        <li href="#demo-tabs-box-3" data-toggle="tab">
+                                            <a>打分系统</a>
                                         </li>
-                                        <li>
-                                            <a href="#demo-tabs-box-4" data-toggle="tab" id="title">考评汇总</a>
+                                        <li href="#demo-tabs-box-4" data-toggle="tab">
+                                            <a id="title">考评汇总</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -190,7 +190,7 @@
                             <!--Panel body-->
                             <div class="panel-body">
                                 <div class="tab-content">
-                                    <div class="tab-pane fade in active" id="demo-tabs-box-1">
+                                    <div class="tab-pane fade tab-bd" id="demo-tabs-box-1">
 
                                         <div id="kpqd">
 
@@ -201,7 +201,7 @@
 
                                         </table>
                                     </div>
-                                    <div class="tab-pane fade" id="demo-tabs-box-3">
+                                    <div class="tab-pane fade tab-bd" id="demo-tabs-box-3">
                                         <!--Custom Toolbar-->
                                         <!--===================================================-->
 
@@ -220,7 +220,7 @@
                                         </div>
                                         <!-- /.modal-content -->
                                     </div>
-                                    <div class="tab-pane fade" id="demo-tabs-box-4">
+                                    <div class="tab-pane fade tab-bd" id="demo-tabs-box-4">
 
                                         <table id="testManage_system" class="demo-add-niftycheck" data-toggle="table" data-search="true" data-show-refresh="true" data-show-toggle="true"
                                                data-show-columns="true" data-sort-name="id" data-page-list="[5, 10, 20]"
